--- a/2019/04/ARTS-2019-04-07.md
+++ b/2019/04/ARTS-2019-04-07.md
@@ -3,9 +3,9 @@
 
  [Review](#review)
 
- [Technique](#technique)
+ [Technique 什么是平衡二叉树](#technique)
 
- [Share](#share)
+ [Share 什么是二叉搜索树](#share)
 
 
 # Algorithm
@@ -89,7 +89,593 @@ public class LongestCommonPrefix {
 # Technique
 
 
+
+### 前言
+上篇文章里面，我们已经学习了二叉搜索树的相关内容，二叉搜索树有一个缺点，在插入数据是有序的序列（包括升序和降序），会导致二叉树退化成链表，从而导致在查找，删除，添加时的性能均从O（logN）降低为O（N），这是不能接受的。如下图：
+
+[img=01]
+
+究其原因，是因为二叉搜索树退化成链表的时候，树的高度与节点的个数相等，也就是成正比，所以为了优化这种情况，就出现了具有平衡能力的二叉搜索树，其中AVL树是最早被发明的自平衡二叉查找树。在AVL树中，任一节点对应的两棵子树的最大高度差为1，因此它也被称为高度平衡树。查找、插入和删除在平均和最坏情况下的时间复杂度都是O（logN）。增加和删除元素的操作则可能需要借由一次或多次树旋转，以实现树的重新平衡。AVL树得名于它的发明者G. M. Adelson-Velsky和Evgenii Landis，他们在1962年的论文《An algorithm for the organization of information》中公开了这一数据结构。
+
+
+
+### 平衡二叉树的性质
+
+平衡二叉树本质上是特殊的二叉搜索树（二叉排序树），它具有二叉搜索树所有的特点，此外它有自己的特别的性质，如下：
+
+（1）它是一棵空树或它的左右两个子树的高度差的绝对值不超过1；
+
+（2）平衡二叉树的左右两个子树都是一棵平衡二叉树。
+
+
+### 什么是平衡因子
+
+平衡因子指的是，平衡二叉树在保持平衡的时候，是通过平衡因子来判断的，节点的平衡因子 = 该节点的左子树的高度 - 该节点右子树的高度。只有当值等于-1（右子树的高度大），0（左右子树的高度相等），1（左子树的高度大）的时候，能够代表该子树是平衡的除此之外，就认为该节点已经失衡了，需要旋转来维持平衡，如下图的平衡因子分布情况：
+
+![image](http://btechsmartclass.com/data_structures/ds_images/AVL%20Example.png)
+
+
+
+### 平衡二叉树的旋转分类
+
+平衡二叉树在插入和删除的时候都有可能发生旋转来维持平衡，总得来说，旋转分四种情形：
+
+
+（1）左旋转
+
+如下图，对二叉搜索树分别插入1,2,3升序序列，会导致树向右倾斜，这个我们需要左旋来平衡树：
+
+![image](http://btechsmartclass.com/data_structures/ds_images/LL%20Rotation.png)
+
+第一张图标记了，当插入3之后，根节点1失衡了，因为1节点没有左子树，所以左子树的高度等于0，而右子树的高度等于2，故两者相减得到-2，证明树失衡了，通过向左旋转，调整了root的位置，从而使得树变得均衡了。
+
+（2）右旋转
+
+如下图，对二叉搜索树分别插入3,2,1降序序列，会导致树向左倾斜，这种情况下我们需要向右旋转来平衡树：
+
+![image](http://btechsmartclass.com/data_structures/ds_images/RR%20Rotation.png)
+
+
+在插入1后，树发现失衡了，故而通过向右旋转的方式，来调整平衡。
+
+
+（3）左右旋转
+
+如下图与（2）的情况类似，但不同的是插入的方式是3,1,2，从而导致最后一个2插入的时候，是在右子树上导致失衡的，这种情况下比前面的稍微复杂，需要旋转两次来调整平衡。
+
+![image](http://btechsmartclass.com/data_structures/ds_images/LR%20Rotation.png)
+
+先左旋之后，发现仍然失衡，然后接着右旋才维持平衡。
+
+
+（4）右左旋转
+
+如下图，对二叉搜索树分别插入1,3,2，与上面的（3）情形正好相反
+
+![image](http://btechsmartclass.com/data_structures/ds_images/RL%20Rotation.png)
+
+
+这种情况下，先右旋然后左旋就可以保持平衡
+
+
+### 代码实现
+
+平衡二叉树的代码，其实和二叉搜索树的代码大体一致，包括搜索，插入和删除功能，主要的区别在于在树节点定义上多加了一个height字段，用来计算均衡因子使用，此外在插入和删除之后要加上检测平衡的代码，如果发现树失衡了就要及时调整：
+
+````
+public class AVLTree {
+
+    class Node{
+        int data;
+        Node left;
+        Node right;
+        int height;
+
+        public Node(int data) {
+            this.data = data;
+            height = 1;
+        }
+
+    }
+
+    public int getHeight(Node n){
+        if(n!=null){
+            return n.height;
+        }
+        return 0;
+    }
+
+    public int getBalance(Node n){
+        if(n!=null){
+            return getHeight(n.left) - getHeight(n.right);
+        }
+        return 0;
+    }
+
+
+    public Node rightRotate(Node y){
+        Node x=y.left;
+        Node T2=x.right;
+
+        //rotation
+        x.right=y;
+        y.left=T2;
+
+        x.height=Math.max(getHeight(x.left),getHeight(x.right))+1;
+        y.height=Math.max(getHeight(y.left),getHeight(y.right))+1;
+
+        return x;
+
+    }
+
+    public Node leftRotate(Node x){
+            Node y=x.right;
+            Node T2=y.left;
+
+            //Rotation
+        y.left=x;
+        x.right=T2;
+
+        //update height
+
+        x.height=Math.max(getHeight(x.left),getHeight(x.right))+1;
+        y.height=Math.max(getHeight(y.left),getHeight(y.right))+1;
+
+        return y;
+
+    }
+
+    public Node insert(Node node, int data){
+        if(node==null){
+            return new Node(data);
+        }
+
+        if(node.data>data){
+            node.left=insert(node.left,data);
+        }else if(node.data<data){
+            node.right=insert(node.right,data);
+        }else {
+            return node;// 已经存在
+        }
+
+        node.height=Math.max(getHeight(node.left),getHeight(node.right))+1;
+
+        int balDiff=getBalance(node);
+
+
+        // 左倾斜，右旋
+        if(balDiff>1&&data<node.left.data){
+            return rightRotate(node);
+        }
+
+        // 右倾斜，左旋
+
+        if(balDiff<-1&&data> node.right.data){
+            return leftRotate(node);
+        }
+
+        // 左倾斜，先左旋，再右旋
+        if(balDiff>1&&data>node.left.data){
+            node.left=leftRotate(node.left);
+            return rightRotate(node);
+        }
+
+
+        // 右倾斜，先右旋，再左旋
+        if(balDiff<-1&&data<node.right.data){
+            node.right=rightRotate(node.right);
+            return leftRotate(node);
+        }
+
+
+        return node;
+
+    }
+
+    private Node delete(Node node, int data){
+
+        if(node==null){
+            System.out.println("要删除的节点不存在");
+            return null;
+        }else if(data<node.data){
+            node.left=delete(node.left,data);
+        }else if(data>node.data){
+            node.right=delete(node.right,data);
+        }else{//叶子节点，或者只拥有一个孩子节点的处理逻辑是一样的
+            if(node.left==null){
+                return node.right;
+            }else if(node.right==null){
+                return node.left;
+            }else{
+                //到这一步说明删除的节点拥有2个孩子节点
+                //找到剩下左子树里面最大的节点，或者找到右子树里面最小的节点，这里使用的是前者
+                //使用最大值覆盖当前要被删除的节点的值
+                node.data=retrieveData(node.left);
+                //最后删除，在剩下左子树里面刚才被替换到最大值的节点
+                node.left=delete(node.left,node.data);
+            }
+
+        }
+
+        if(node==null) return null;
+
+        node.height=Math.max(getHeight(node.left),getHeight(node.right))+1;
+
+        int balDiff=getBalance(node);
+
+        // 左倾斜，右旋
+        if(balDiff>1&&getBalance(node.left)>=0){
+            return rightRotate(node);
+        }
+
+
+        // 右倾斜，左旋
+
+        if(balDiff<-1&&getBalance(node.right)<=0){
+            return leftRotate(node);
+        }
+
+
+        // 左倾斜，先左旋，再右旋
+        if(balDiff>1&&getBalance(node.left)<0){
+            node.left=leftRotate(node.left);
+            return rightRotate(node);
+        }
+
+        // 右倾斜，先右旋，再左旋
+        if(balDiff<-1&&getBalance(node.right)>0){
+            node.right=rightRotate(node.right);
+            return  leftRotate(node);
+        }
+
+        return node;
+    }
+
+    private int retrieveData(Node p)
+    {
+        while (p.right != null) p = p.right;
+
+        return p.data;
+    }
+
+
+
+
+    public void inorder(Node root) {
+        if (root != null) {
+            inorder(root.left);
+            System.out.print(" " + root.data);
+            inorder(root.right);
+        }
+    }
+
+    public List<List<Integer>> levelOrder(Node root) {
+        List result = new ArrayList();
+
+        if (root == null) {
+            return result;
+        }
+
+        Queue<Node> queue = new LinkedList<Node>();
+        queue.offer(root);
+
+        while (!queue.isEmpty()) {
+            ArrayList<Integer> level = new ArrayList<Integer>();
+            int size = queue.size();
+            for (int i = 0; i < size; i++) {
+                Node head = queue.poll();
+                level.add(head.data);
+                if (head.left != null) {
+                    queue.offer(head.left);
+                }
+                if (head.right != null) {
+                    queue.offer(head.right);
+                }
+            }
+            result.add(level);
+        }
+        System.out.println(result);
+        return result;
+    }
+
+    public static void main(String[] args) {
+
+        Node root = null;
+        AVLTree i = new AVLTree();
+        testCase2(root,i);
+    }
+
+
+
+    private static void testCase1(Node root,AVLTree i ){
+        root = i.insert(root, 1);
+        root = i.insert(root, 2);
+        root = i.insert(root, 3);
+
+        root = i.insert(root, 4);
+        root = i.insert(root, 5);
+        root = i.insert(root, 6);
+        root = i.insert(root, 7);
+        root = i.insert(root, 8);
+        i.levelOrder(root);
+        root = i.delete(root,5);
+        i.levelOrder(root);
+    }
+
+
+    private static void testCase2(Node root,AVLTree i ){
+        root = i.insert(root, 50);
+        root = i.insert(root, 25);
+        root = i.insert(root, 75);
+
+        root = i.insert(root, 15);
+        root = i.insert(root, 40);
+        root = i.insert(root, 60);
+        root = i.insert(root, 80);
+        root = i.insert(root, 35);
+        root = i.insert(root, 55);
+        root = i.insert(root, 65);
+        root = i.insert(root, 90);
+        root = i.insert(root, 62);
+        i.levelOrder(root);
+
+        root = i.delete(root,15);
+        i.levelOrder(root);
+
+
+    }
+
+
+}
+````
+
+### 平衡二叉树的优缺点
+
+优点：
+通过严格的平衡性保证，其搜索性能在最差的情况下的也得达到O（logn）
+
+缺点：
+为了保证严格的均衡性，导致在插入和删除的时候需要额外花费时间旋转来调整平衡度，从而使得插入和删除的性能下降
+	
+	
+### 总结
+
+
+本文主要介绍了平衡二叉树的相关内容，AVL平衡二叉树很好的解决了二叉搜索树在遇到有序序列性能退化为O（N）的情况，使得在最坏情况下的搜索效率仍然能够达到O（logN），但这种优化是牺牲了插入和删除的性能换来的，故而AVL树并不适合需要频繁插入和删除的场景，而红黑树则是权衡了
+这种情况，其并不强调严格的平衡性，而是保持一定的平衡性，从而使得在搜索，插入，删除的场景下均有一个不错的速度，这个会在后续的文章中分析。
+	
+	
+
+
+
+
+
+
 # Share
+
+
+
+
+
+二叉搜索树是一种综合效率比较好的一种数据结构，搜索、插入、删除的复杂度等于树高， 平均空间复杂度为O（n），时间复杂度为O(log n)，最坏时间复杂度为O（n），（当插入的数列有序，导致二叉树退化为线性表），故一些其他的树，在二叉搜索树基础上进行改良的平衡树，如AVL树、红黑树等，可以使得树的高度总是得到平衡，从而使得最坏的情况下，时间复杂度也能达到O(log n)。
+
+在没有二叉搜索树这种结构出现的时候，我们如果想对一个有序的序列，进行快速的检索，使用数组是可以做到的，但数组的弊端在于，如果我想向这个序列里面插入或者删除一个新的元素，使用数组就可能捉襟见肘了，而链表则对插入，删除非常友好，但检索性能比较低，故才出现了二叉搜索树这种结够，使得查询和更新能够达到不错的一个O（log n）性能权衡。
+
+![image](https://www.cs.cmu.edu/~adamchik/15-121/lectures/Trees/pix/pix03.bmp)
+
+二叉搜索树的特点
+
+（1）每个节点包含一个key，也称data的数据域
+
+（2）左子树不为空的情况下，左子树的每个节点值都小于根节点的值，即：L < P
+
+（3）右子树不为空的情况下，右子树的每个节点值都大于根节点的值，即：P < R
+
+（4）节点的值不允许出现重复
+
+（5）任意节点的左，右子树，均符合上面的规则
+
+
+ 二叉搜索树的插入
+
+二叉搜索树的插入与二叉树的搜索非常类似，当一个新的值要插入的时候，首先与根节点进行比较，如果大于根节点则进入右子树进行递归找位置，如果小于根节点则进入左子树进行递归找位置，按照二叉树的性质，新插入的节点最终会落在某在一个位置上，注意如果该值已经存在那么则不做任何处理，因为二叉树不允许重复的值插入。
+下图在插入节点7之后的变化：
+
+![image](https://www.cs.cmu.edu/~adamchik/15-121/lectures/Trees/pix/insert.bmp)
+
+二叉搜索树的搜索
+
+二叉搜索树的搜索与插入流程类型，都是从root节点开始，然后锁定要查询节点所在的子树，如果大于根节点则在右边搜索，否则则在左边，然后递归遍历，直到找到结果，如果没有找到，则返回false即可。
+
+
+二叉搜索树的删除
+
+
+删除相对于插入和搜索要复杂一点，删除一个节点要考虑如下几种情况：
+
+（1）删除的节点不存在
+
+（2）删除的节点是叶子节点
+
+（3）删除的节点有一个孩子节点
+
+（4）删除的节点包含两个孩子节点
+
+
+第一种情况，不做处理，第二种和第三种情况，其实与链表处理的策略是一样的，如果是叶子节点直接将其赋值成null即可，如果包含一个孩子节点，则直接取孩子节点覆盖要删除的节点即可，如下：
+![image](https://www.cs.cmu.edu/~adamchik/15-121/lectures/Trees/pix/del01.bmp)
+
+
+第四种情况，如果该节点有两个孩子节点，这种情况就复杂了点，因为直接删除该节点会导致树结构遭到破坏，所以不能直接删除，要先找到该节点在左子树里面的最大节点或者右子树里面的最小节点，然后将最大节点的值替换到要删除的节点，之后在左子树里面再删除该节点的值即可，这样就完成了拥有两个节点删除的情况，如下图示：
+![image](https://www.cs.cmu.edu/~adamchik/15-121/lectures/Trees/pix/del02.bmp)
+
+
+下面我们看下代码实现：
+
+首先定义一个二叉树结构：
+```
+
+public class BST< T extends Comparable<T>> {
+
+    public Node<T> root;
+    
+       static class Node<T>{
+        public T data;
+        public Node<T> left;
+        public Node<T> right;
+
+        public Node(T data, Node<T> left, Node<T> right) {
+            this.data = data;
+            this.left = left;
+            this.right = right;
+        }
+
+       @Override
+       public String toString() {
+           return "Node{" +
+                   "data=" + data +
+                   '}';
+       }
+   }
+    
+    
+    
+    }
+```
+
+然后分别定义插入方法：
+
+```
+  public void insert(T data){
+        root=insert(root, data); //递归插入
+    }
+
+    public Node<T> insert(Node<T> p, T data){
+
+        if(p==null){
+            return new Node<>(data,null,null);
+        }
+
+        if(compare(p.data,data)==0){
+            return p;
+        }
+
+        if(compare(data,p.data)<0){
+            p.left=insert(p.left,data);
+        }else {
+            p.right=insert(p.right,data);
+        }
+        return p;
+    }
+    
+    
+```
+
+搜索方法：
+
+
+```
+     public boolean search(T data){
+      return   search(root,data);
+    }
+
+    public boolean search(Node<T> node,T data){
+        if(node==null){
+            return false;
+        }
+        if(compare(node.data,data)==0){
+            return true;
+        }else if(compare(data,node.data)<0) {
+            return search(node.left,data);
+        }else{
+            return search(node.right,data);
+        }
+
+    }
+```
+
+最后是删除的方法：
+
+```
+   public void delete(T data){
+        root=delete(root,data);
+    }
+
+    public Node<T> delete(Node<T> node,T data){
+
+        if(node==null){
+            throw new RuntimeException("删除的节点不存在");
+        }else if(compare(data,node.data)<0){
+            node.left=delete(node.left,data);
+        }else if(compare(data,node.data)>0){
+            node.right=delete(node.right,data);
+        }else{//叶子节点，或者只拥有一个孩子节点的处理逻辑是一样的
+            if(node.left==null){
+                return node.right;
+            }else if(node.right==null){
+                return node.left;
+            }else{
+                //到这一步说明删除的节点拥有2个孩子节点
+                //找到剩下左子树里面最大的节点，或者找到右子树里面最小的节点，这里使用的是前者
+                //使用最大值覆盖当前要被删除的节点的值
+                node.data=retrieveData(node.left);
+                //最后删除，在剩下左子树里面刚才被替换到最大值的节点
+                node.left=delete(node.left,node.data);
+            }
+
+        }
+
+    return node;
+    }
+
+
+    private T retrieveData(Node<T> p)
+    {
+        while (p.right != null) p = p.right;
+
+        return p.data;
+    }
+```
+
+二叉搜索树的中序遍历，即可得到一个有序的数列，我们看下中序遍历的递归实现：
+
+```
+   private void inOrder(Node<T> node){
+        if(node==null) return;
+        inOrder(node.left);
+        System.out.println(node);
+        inOrder(node.right);
+    }
+```
+代码比较简单，然后我们再看下不用递归，使用迭代方式的中序遍历方式：
+
+```
+
+    public void inOrderiterator(Node<Integer> root){
+
+        Stack<Node<Integer>> stack=new Stack<>();
+        List<Integer> list=new ArrayList<>();
+        while (root!=null||!stack.isEmpty()){
+            if(root!=null) {
+                stack.push(root);
+                root = root.left;
+            }else{
+                root=stack.pop();
+                list.add(root.data);
+                root=root.right;
+            }
+        }
+
+        System.out.println(list);
+        
+    }
+```
+
+这里借助了栈这个数据结构，非常简单的就实现了迭代版本的中序遍历，关于前序和后序版本这里就不再给出例子了，感兴趣的朋友可以自己研究下。
+
+
+二叉搜索树是一个非常高效的数据结构，其综合效率约为O（logn），但插入数列为有序数列时，插入性能会退化为O（n），这是二叉搜索树的一个弊端，在改良后加入了具有平衡的功能时候，可以使得树的高度保持均衡，就演变成了AVL或者红黑树，这个时候即使是有序数列，插入性能也可保持在O（logn），这也是为什么红黑树高效的原因。
+
 
 
 
