Increse review content

--- a/2019/04/ARTS-2019-04-14.md
+++ b/2019/04/ARTS-2019-04-14.md
@@ -1,7 +1,7 @@
 
  [Algorithm Squares of a sorted array ](#algorithm)
 
- [Review](#review)
+ [Review how mysql use like statement to copy table? ](#review)
 
  [Technique](#technique)
 
@@ -57,6 +57,22 @@ public class SortedArraySquare {
 
 
 # Review
+官网文档：https://dev.mysql.com/doc/refman/5.7/en/create-table-like.html
+
+```sql
+create table bdmc_resource_stat_tmp LIKE bdmc_resource_stat;
+```
+
+
+
+
+使用create table 新表名  like   旧表名 ，可以基于一个已经存在的表进行复制一个新的空表，包括任何原表列的属性和索引。
+
+
+like语句仅仅可以在table上使用，不能在视图上使用。此外如果通过mycat代理的的sql服务也是不行的，必须通过物理的mysql服务才能创建，否则会报下面的异常：
+> [Err] 1064 - op table not in schema----BDMC_RESOURCE_STAT_TMP
+
+
 
 
 # Technique
