--- a/2019/04/ARTS-2019-04-21.md
+++ b/2019/04/ARTS-2019-04-21.md
@@ -1,7 +1,8 @@
 
- [Algorithm](#algorithm)
+ [Algorithm  红黑树的实现](#algorithm)
+ 
 
- [Review ](#review)
+ [Review https://www.quora.com/What-is-the-difference-between-complete-and-full-binary-trees ](#review)
 
  [Technique 还分不清楚一些二叉树种类和概念？](#technique)
 
@@ -9,224 +10,6 @@
 
 
 # Algorithm
-
-
-# Review
-
-
-
-
-# Technique
-
-
-前言
-刚接触二叉树的学习的时候，相信很多人可能会被二叉树各种各样的叫法和概念给绕晕了，今天就来科普一下关于二叉树我们需要知道的一些树的种类，以及它的特点。
-比较常见的一些树名称的种类如下，你能够分清他们的区别吗？
-（1）完全二叉树
-（2）均衡二叉树
-（3）有序二叉树
-（4）满二叉树
-（5）完美二叉树
-如果还分不清楚，也不要紧，下面我们就来学习一下。
-二叉树（Binary Tree）
-二叉树是树类应用最广泛的一种数据结构，顾名思义，二叉树的每个节点最多只能包含两个孩子节点，一个节点可以包含0个，1个，2个孩子，如果是两个孩子，也就是通常我们说的左孩子和右孩子，图示如下：
-
-
-有的朋友可能会思考，是否有三叉树，四叉树，N叉树呢？答案是肯定的，但树的分叉越多，内部结构就越复杂，理解起来就比较困难，这也是为什么二叉树如此流行的原因。
-满二叉树（Full Binary tree）
-满二叉树是二叉树里面一种分类，它的特点是每个节点的孩子节点要么没有，要么就是两个，不允许出现单个孩子的情况，图示如下：
-
-
-完全二叉树（Complete Binary Tree）
-完全二叉树是二叉树里面另外一个分类，它的特点是每个节点的孩子节点的数量可以是0， 1， 2 个，除此之外它要求每层节点添加，必须是从左到右，不允许跳着添加，图示如下：
-
-
-
-
-上面的4个图示都是完全二叉树，下面我们在看几个反例：
-
-
-
-
-
-注意上面这5张图都是完全二叉树，图1里面0节点还没有孩子，记住完全二叉树每层的添加节点必须是从左到右的，左边的节点还没有孩子，就添加右边的就违背了其定义，图2里面一样问题，3,7,10的插入都不是正确的顺序，图3,4,5的问题都是一样的，最下面的一层必须是从左到右的顺序添加。
-二叉搜索树 （Ordered Binary Tree ）
-也称二叉排序树，这个是我们接触的最多的一种结构，它要求节点的左子树小于该节点本身，右子树大于该节点，每个节点都符合这样的规则，对二叉搜索树进行中序遍历就得得到一个有序的序列，如下图：
-
-
-二叉排序树的问题在于，如果树本身不是均衡的会导致树退化成链表，这个时候所有操作的效率都是O（N），效率大大降低，如下：
-
-
-再看下满二叉树，完全二叉树，和普通二叉树的图示：
-
-
-均衡二叉树 （Balanced Binary Tree:）
-严格均衡二叉树指的是一个节点的左右子树的高度差值不能大于1，均衡二叉树一般都是在二叉搜索树的基础之上添加自动维持平衡的性质，这种树的插入，搜索，删除的综合效率比较高为O（logN），比如前面介绍的AVL树(严格平衡的二叉树)和红黑树（非严格平衡的二叉树）。
-均衡和倾斜的二叉树如下图示：
-
-
-完美二叉树 （Perfect binary Tree）
-完美二叉树是理想中的一种二叉树，这种树的特点就是非常完美，每个节点都有两个孩子节点，并且都层都被完全填空，完美二叉树的叶子节点的高度都是一样，如下图示：
-
-
-总结
-本文主要介绍了二叉树相关的各种种类和特点，在这里我们还需要记住几个重要的知识，首先满二叉树不是均衡树，而完全二叉树则是均衡树，但均衡树却又不一定是完全二叉树，这一点从其性质上就能够得到。此外满二叉树和完全二叉树没有直接的关系，没有谁是谁这一说法。完全二叉树是一种非常高效和紧凑的树结构，堆这种数据结构就是基于完全二叉树实现的，堆的逻辑结构就是完全二叉树，其物理结构常用数组存储，常见的场景就是海量数据求Top N的问题，此外Java里面的优先级队列也是基于堆这种结构实现的，感兴趣的朋友可以自己去了解下。最后我们应该知道均衡的树的性能要比不均衡的树的性能要高很多，为了保持均衡性一般会有特定的规则来约束树，而解决均衡的手段通常是旋转和变色。除了二叉树，还有多叉均衡树，比如2-3树，B树，B+树等，多叉树的实现更加复杂，但是其树的高度比较低，所以拥有较高的查找性能，常用在数据库索引和文件系统。
-
-
-# Share
-
-
-
-
-
-
-
-### 前言
-
-前面的文章已经介绍过二叉搜索树，AVL树，以及2-3Tree，今天我们再来学习一下二叉搜索树里面的大佬，它就是红黑树。红黑树（英语：Red–black tree）是一种自平衡二叉查找树，是在计算机科学中用到的一种数据结构，它在1972年由鲁道夫·贝尔发明，被称为"对称二叉B树"，它现代的名字源于Leo J. Guibas和Robert Sedgewick于1978年写的一篇论文，红黑树的结构复杂，但它的操作有着良好的最坏情况运行时间，并且在实践中高效：它可以在O（logN）时间内完成查找，插入和删除。
-
-同样是自平衡的二叉搜索树的AVL树，由于保持了严格的均衡策略，导致在插入和删除频繁时，性能会下降的比较厉害，而红黑树则是不强调严格的均衡性，所以在删除和插入的时候，综合性能要高于AVL树，但查询性能则略低于AVL树，所以这也是红黑树为什么被广泛应用的原因，因为你综合性能比较优越。
-
-### 红黑树的性质
-
-红黑树是每个节点都带有颜色属性的二叉查找树，颜色为红色或黑色。在符合二叉搜索树的基础上，对于任何有效的红黑树，为了保持均衡性，又增加了额外的定义也就是其性质，如下：
-
-（1）根节点是黑色
-
-（2）每个节点的颜色，只能黑色或者红色
-
-（3）所有的叶子节点都是黑色，注意叶子节点是null节点，不存储数据，就是了为了补全节点用的，从这个定义来说红黑树是保持均衡性的满二叉树。
-
-（4）每个红色节点必须有两个黑色的节点，翻译成另一种意思就是，在红黑树里面不会出现两个相邻的红色节点
-
-（5）从任一节点出发到其叶子节点，都必须包含相同数目的黑色节点。
-
-（6）在红黑树里面新加入的节点的颜色是红色的，注意这一条性质，很多网上的资料都没有说明。
-
-
-下面看一个具体的图示：
-
-[img]
-
-
-
-基于这些性质，才确保了红黑树是一个综合性能高效的动态数据结构，二叉搜索树的性能依赖于树的高度，不平衡的二叉搜索树的问题就在于，如果插入数据是有序的，那么二叉树会退化成链表，从而导致时间复杂度变为O（N），试想一下现在有42亿的数据，如果时间复杂度是O(N)，那么搜索效率可想而知，但如果是均衡的二叉树，那么查询次数只需要大概32次便可以，这就是均衡的重要性。红黑树不是从根到叶子的最长的可能路径不多于最短的可能路径的两倍长，结果是这个树大致上是平衡的，为什么说最长路径不多于最短路径的两倍，我们从性质4就能够推导出来，如果每个红色节点必须要有两个黑色节点，那么同样数量的红色节点和黑色节点，红色节点每一个都需要一个黑色子节点，这样最坏情况下最长路径的的长度刚好是最短的2倍。
-
-第二个问题是为什么新加入的节点必须是红色的，因为从性质5上来看，要保持相等黑色节点数量才能符合红黑树的性质，如果插入的节点默认是黑色的，那么一定会破坏红黑树的性质，而红色则不一定，除非它的父节点也是红色，这么看来红色破坏性质的几率更小。
-
-
-第三个问题，我们可以思考下，红黑树可不可以全是由黑色节点组成。这个理论上是可以的，只有一个root节点，它的颜色肯定是黑色的，此外，理想情况下一颗完美二叉树的也可以由全部黑色组成，但
-红黑树的新增节点为红色，所以想组成完美二叉树基本不可能。
-
-### 红黑树的平衡原理
-
-不同于AVL树在每一个节点上维持了高度字段辅以旋转策略来维持平衡，红黑树在插入和删除的时候，维持平衡的手段主要有两个：
-
-（1）变色
-
-（2）旋转
-
-
-
-
-
-（一）插入操作
-
-在红黑树上进行插入操作和删除操作会导致不再匹配红黑树的性质。恢复红黑树的性质需要少量O（logN）的颜色变更（实际是非常快速的）和不超过三次树旋转（对于插入操作是两次）。虽然插入和删除很复杂，但操作时间仍可以保持为 O（logN）次。
-
-
-情况一：只需要变色维持红黑树的性质
-
-考虑这样一种情况，新插入节点的父节点不是黑色节点，也不是root节点，并且它的叔叔节点是红色，如下图：
-
-[img=02]
-
-这种情况下，比较容易解决，因为新插入的节点默认是红色的，所以出现了双红节点，违背了红黑树的性质，所以需要变色，解决手段是把父节点和叔叔节点变成黑色，然后爷爷节点变成红色，接着从
-爷爷节点出发，依次校验修复直到根节点。
-
-情况二：变色+旋转
-
-
-
-考虑这样一种情况，新插入节点的父节点不是黑色节点，也不是root节点，并且它的叔叔节点是黑色，这种情况下处理就复杂了，不能简单通过变色来处理了。
-
-旋转分四种情况：
-
-case1：左左
-
-这种情况下，新插入的节点和父节点都是左孩子，所以定义做左左case，解决策略是以爷爷节点右旋，然后变色。如下图：
-
-[img=03]
-
-case2：左右
-
-这种情况下，新插入的节点是右孩子，但父节点是左孩子，所以定义做左右case，解决策略是先以父节点左旋，然后以爷爷节点右旋，然后变色，如下图：
-
-[img=04]
-
-
-case3：右右
-
-这种情况下，新插入的节点是右孩子，且父节点也是右孩子，所以定义做右右case，解决策略是爷爷节点左旋，然后变色，如下图：
-
-[img=05]
-
-case4：右左
-
-这种情况下，新插入的节点是左孩子，但父节点也是右孩子，所以定义做右左case，解决策略是先以父节点右旋，然后以爷爷节点左旋，最后变色，如下图：
-
-[img=06]
-
-
-
-这些是插入操作的维持均衡的手段，总体来说，相比AVL树略复杂，下面我们看下删除操作
-
-（二）删除操作
-
-
-删除操作相比插入操作更加复杂，对于二叉搜索树来说，删除场景分三种，删除的节点无孩子节点，删除的节点有一个孩子，删除的节点有两个孩子节点，但是在红黑树里面，每个叶子节点，都会定义其下面有两个黑色的null节点，再加上颜色操作，考虑的场景就复杂了。
-
-
-情况一： 简单的删除场景
-
-这种情况下，孩子节点和父亲节点的颜色不一样，我们直接删除即可，如下图：
-
-[img=07]
-
-
-情况二： 复杂的场景
-
-
-这种情况下，孩子节点和父节点都是黑色，称为双黑，前面说过黑色节点的删除，毕然破坏红黑树的性质，所以要做修复：
-
-
-case 1：兄弟节点是黑色，并且兄弟节点的有一个红色孩子节点：如下图：
-
-右右场景：
-
-[img=08]
-
-
-右左场景：
-
-[img=09]
-
-
-case 2： 兄弟节点是黑色，并且它的子节点都是黑色，需要通过变色来处理，并且递归处理到根节点：如下图：
-
-[img=10]
-
-
-case 3: 兄弟节点是红色，那么它的子节点肯定都是黑色，这种情况需要旋转和变色来处理，如下图：
-
-
-[img=11]
-
-
-
-### 红黑树的实现
-
-这里用的是java语言，源码如下：
 
 ```java
 public class RBTree<K extends  Comparable<K>,V>   {
@@ -766,6 +549,221 @@ public class RBTree<K extends  Comparable<K>,V>   {
 
 
 ```
+
+
+# Review
+https://www.quora.com/What-is-the-difference-between-complete-and-full-binary-trees
+
+主要介绍了完全二叉树和满二叉树的区别
+
+
+# Technique
+
+
+前言
+刚接触二叉树的学习的时候，相信很多人可能会被二叉树各种各样的叫法和概念给绕晕了，今天就来科普一下关于二叉树我们需要知道的一些树的种类，以及它的特点。
+比较常见的一些树名称的种类如下，你能够分清他们的区别吗？
+（1）完全二叉树
+（2）均衡二叉树
+（3）有序二叉树
+（4）满二叉树
+（5）完美二叉树
+如果还分不清楚，也不要紧，下面我们就来学习一下。
+二叉树（Binary Tree）
+二叉树是树类应用最广泛的一种数据结构，顾名思义，二叉树的每个节点最多只能包含两个孩子节点，一个节点可以包含0个，1个，2个孩子，如果是两个孩子，也就是通常我们说的左孩子和右孩子，图示如下：
+
+
+有的朋友可能会思考，是否有三叉树，四叉树，N叉树呢？答案是肯定的，但树的分叉越多，内部结构就越复杂，理解起来就比较困难，这也是为什么二叉树如此流行的原因。
+满二叉树（Full Binary tree）
+满二叉树是二叉树里面一种分类，它的特点是每个节点的孩子节点要么没有，要么就是两个，不允许出现单个孩子的情况，图示如下：
+
+
+完全二叉树（Complete Binary Tree）
+完全二叉树是二叉树里面另外一个分类，它的特点是每个节点的孩子节点的数量可以是0， 1， 2 个，除此之外它要求每层节点添加，必须是从左到右，不允许跳着添加，图示如下：
+
+
+
+
+上面的4个图示都是完全二叉树，下面我们在看几个反例：
+
+
+
+
+
+注意上面这5张图都是完全二叉树，图1里面0节点还没有孩子，记住完全二叉树每层的添加节点必须是从左到右的，左边的节点还没有孩子，就添加右边的就违背了其定义，图2里面一样问题，3,7,10的插入都不是正确的顺序，图3,4,5的问题都是一样的，最下面的一层必须是从左到右的顺序添加。
+二叉搜索树 （Ordered Binary Tree ）
+也称二叉排序树，这个是我们接触的最多的一种结构，它要求节点的左子树小于该节点本身，右子树大于该节点，每个节点都符合这样的规则，对二叉搜索树进行中序遍历就得得到一个有序的序列，如下图：
+
+
+二叉排序树的问题在于，如果树本身不是均衡的会导致树退化成链表，这个时候所有操作的效率都是O（N），效率大大降低，如下：
+
+
+再看下满二叉树，完全二叉树，和普通二叉树的图示：
+
+
+均衡二叉树 （Balanced Binary Tree:）
+严格均衡二叉树指的是一个节点的左右子树的高度差值不能大于1，均衡二叉树一般都是在二叉搜索树的基础之上添加自动维持平衡的性质，这种树的插入，搜索，删除的综合效率比较高为O（logN），比如前面介绍的AVL树(严格平衡的二叉树)和红黑树（非严格平衡的二叉树）。
+均衡和倾斜的二叉树如下图示：
+
+
+完美二叉树 （Perfect binary Tree）
+完美二叉树是理想中的一种二叉树，这种树的特点就是非常完美，每个节点都有两个孩子节点，并且都层都被完全填空，完美二叉树的叶子节点的高度都是一样，如下图示：
+
+
+总结
+本文主要介绍了二叉树相关的各种种类和特点，在这里我们还需要记住几个重要的知识，首先满二叉树不是均衡树，而完全二叉树则是均衡树，但均衡树却又不一定是完全二叉树，这一点从其性质上就能够得到。此外满二叉树和完全二叉树没有直接的关系，没有谁是谁这一说法。完全二叉树是一种非常高效和紧凑的树结构，堆这种数据结构就是基于完全二叉树实现的，堆的逻辑结构就是完全二叉树，其物理结构常用数组存储，常见的场景就是海量数据求Top N的问题，此外Java里面的优先级队列也是基于堆这种结构实现的，感兴趣的朋友可以自己去了解下。最后我们应该知道均衡的树的性能要比不均衡的树的性能要高很多，为了保持均衡性一般会有特定的规则来约束树，而解决均衡的手段通常是旋转和变色。除了二叉树，还有多叉均衡树，比如2-3树，B树，B+树等，多叉树的实现更加复杂，但是其树的高度比较低，所以拥有较高的查找性能，常用在数据库索引和文件系统。
+
+
+# Share
+
+
+
+
+
+
+
+### 前言
+
+前面的文章已经介绍过二叉搜索树，AVL树，以及2-3Tree，今天我们再来学习一下二叉搜索树里面的大佬，它就是红黑树。红黑树（英语：Red–black tree）是一种自平衡二叉查找树，是在计算机科学中用到的一种数据结构，它在1972年由鲁道夫·贝尔发明，被称为"对称二叉B树"，它现代的名字源于Leo J. Guibas和Robert Sedgewick于1978年写的一篇论文，红黑树的结构复杂，但它的操作有着良好的最坏情况运行时间，并且在实践中高效：它可以在O（logN）时间内完成查找，插入和删除。
+
+同样是自平衡的二叉搜索树的AVL树，由于保持了严格的均衡策略，导致在插入和删除频繁时，性能会下降的比较厉害，而红黑树则是不强调严格的均衡性，所以在删除和插入的时候，综合性能要高于AVL树，但查询性能则略低于AVL树，所以这也是红黑树为什么被广泛应用的原因，因为你综合性能比较优越。
+
+### 红黑树的性质
+
+红黑树是每个节点都带有颜色属性的二叉查找树，颜色为红色或黑色。在符合二叉搜索树的基础上，对于任何有效的红黑树，为了保持均衡性，又增加了额外的定义也就是其性质，如下：
+
+（1）根节点是黑色
+
+（2）每个节点的颜色，只能黑色或者红色
+
+（3）所有的叶子节点都是黑色，注意叶子节点是null节点，不存储数据，就是了为了补全节点用的，从这个定义来说红黑树是保持均衡性的满二叉树。
+
+（4）每个红色节点必须有两个黑色的节点，翻译成另一种意思就是，在红黑树里面不会出现两个相邻的红色节点
+
+（5）从任一节点出发到其叶子节点，都必须包含相同数目的黑色节点。
+
+（6）在红黑树里面新加入的节点的颜色是红色的，注意这一条性质，很多网上的资料都没有说明。
+
+
+下面看一个具体的图示：
+
+[img]
+
+
+
+基于这些性质，才确保了红黑树是一个综合性能高效的动态数据结构，二叉搜索树的性能依赖于树的高度，不平衡的二叉搜索树的问题就在于，如果插入数据是有序的，那么二叉树会退化成链表，从而导致时间复杂度变为O（N），试想一下现在有42亿的数据，如果时间复杂度是O(N)，那么搜索效率可想而知，但如果是均衡的二叉树，那么查询次数只需要大概32次便可以，这就是均衡的重要性。红黑树不是从根到叶子的最长的可能路径不多于最短的可能路径的两倍长，结果是这个树大致上是平衡的，为什么说最长路径不多于最短路径的两倍，我们从性质4就能够推导出来，如果每个红色节点必须要有两个黑色节点，那么同样数量的红色节点和黑色节点，红色节点每一个都需要一个黑色子节点，这样最坏情况下最长路径的的长度刚好是最短的2倍。
+
+第二个问题是为什么新加入的节点必须是红色的，因为从性质5上来看，要保持相等黑色节点数量才能符合红黑树的性质，如果插入的节点默认是黑色的，那么一定会破坏红黑树的性质，而红色则不一定，除非它的父节点也是红色，这么看来红色破坏性质的几率更小。
+
+
+第三个问题，我们可以思考下，红黑树可不可以全是由黑色节点组成。这个理论上是可以的，只有一个root节点，它的颜色肯定是黑色的，此外，理想情况下一颗完美二叉树的也可以由全部黑色组成，但
+红黑树的新增节点为红色，所以想组成完美二叉树基本不可能。
+
+### 红黑树的平衡原理
+
+不同于AVL树在每一个节点上维持了高度字段辅以旋转策略来维持平衡，红黑树在插入和删除的时候，维持平衡的手段主要有两个：
+
+（1）变色
+
+（2）旋转
+
+
+
+
+
+（一）插入操作
+
+在红黑树上进行插入操作和删除操作会导致不再匹配红黑树的性质。恢复红黑树的性质需要少量O（logN）的颜色变更（实际是非常快速的）和不超过三次树旋转（对于插入操作是两次）。虽然插入和删除很复杂，但操作时间仍可以保持为 O（logN）次。
+
+
+情况一：只需要变色维持红黑树的性质
+
+考虑这样一种情况，新插入节点的父节点不是黑色节点，也不是root节点，并且它的叔叔节点是红色，如下图：
+
+[img=02]
+
+这种情况下，比较容易解决，因为新插入的节点默认是红色的，所以出现了双红节点，违背了红黑树的性质，所以需要变色，解决手段是把父节点和叔叔节点变成黑色，然后爷爷节点变成红色，接着从
+爷爷节点出发，依次校验修复直到根节点。
+
+情况二：变色+旋转
+
+
+
+考虑这样一种情况，新插入节点的父节点不是黑色节点，也不是root节点，并且它的叔叔节点是黑色，这种情况下处理就复杂了，不能简单通过变色来处理了。
+
+旋转分四种情况：
+
+case1：左左
+
+这种情况下，新插入的节点和父节点都是左孩子，所以定义做左左case，解决策略是以爷爷节点右旋，然后变色。如下图：
+
+[img=03]
+
+case2：左右
+
+这种情况下，新插入的节点是右孩子，但父节点是左孩子，所以定义做左右case，解决策略是先以父节点左旋，然后以爷爷节点右旋，然后变色，如下图：
+
+[img=04]
+
+
+case3：右右
+
+这种情况下，新插入的节点是右孩子，且父节点也是右孩子，所以定义做右右case，解决策略是爷爷节点左旋，然后变色，如下图：
+
+[img=05]
+
+case4：右左
+
+这种情况下，新插入的节点是左孩子，但父节点也是右孩子，所以定义做右左case，解决策略是先以父节点右旋，然后以爷爷节点左旋，最后变色，如下图：
+
+[img=06]
+
+
+
+这些是插入操作的维持均衡的手段，总体来说，相比AVL树略复杂，下面我们看下删除操作
+
+（二）删除操作
+
+
+删除操作相比插入操作更加复杂，对于二叉搜索树来说，删除场景分三种，删除的节点无孩子节点，删除的节点有一个孩子，删除的节点有两个孩子节点，但是在红黑树里面，每个叶子节点，都会定义其下面有两个黑色的null节点，再加上颜色操作，考虑的场景就复杂了。
+
+
+情况一： 简单的删除场景
+
+这种情况下，孩子节点和父亲节点的颜色不一样，我们直接删除即可，如下图：
+
+[img=07]
+
+
+情况二： 复杂的场景
+
+
+这种情况下，孩子节点和父节点都是黑色，称为双黑，前面说过黑色节点的删除，毕然破坏红黑树的性质，所以要做修复：
+
+
+case 1：兄弟节点是黑色，并且兄弟节点的有一个红色孩子节点：如下图：
+
+右右场景：
+
+[img=08]
+
+
+右左场景：
+
+[img=09]
+
+
+case 2： 兄弟节点是黑色，并且它的子节点都是黑色，需要通过变色来处理，并且递归处理到根节点：如下图：
+
+[img=10]
+
+
+case 3: 兄弟节点是红色，那么它的子节点肯定都是黑色，这种情况需要旋转和变色来处理，如下图：
+
+
+[img=11]
+
+
 
 ### 红黑树  VS  AVL树
 
